@@ -10,7 +10,7 @@ import java.util.Map;
 
 public class BooksList {
 
-    private List<Map<String, String>> booksInfoList;
+    private final List<Map<String, String>> booksInfoList;
 
     public BooksList() {
         this.booksInfoList = new ArrayList<>();
@@ -24,10 +24,10 @@ public class BooksList {
     }
 
     public void saveBookInfo(ElementsCollection books) {
-        String name = "";
-        String author = "";
+        String name;
+        String author;
         String price = "";
-        String bestSeller = "";
+        String bestSeller;
         for(SelenideElement book : books) {
             name = book.find(By.xpath(".//h2"))
                     .find(By.xpath(".//span"))
@@ -36,11 +36,11 @@ public class BooksList {
             ElementsCollection elements = book.$$(By.className("a-size-base"));
             for (int i = 0; i < elements.size(); i++) {
                 if (elements.get(i).getText().equals("by")) {
-                    author = elements.get(i + 1).text();
+                    price = elements.get(i + 1).text();
                     break;
                 }
             }
-            price = book.$$(By.className("a-offscreen")).texts().get(0);
+            author = book.$$(By.className("a-offscreen")).texts().getFirst();
 
             if (book.$(By.className("a-badge-text")).exists()) {
                 bestSeller = "yes";
@@ -48,9 +48,8 @@ public class BooksList {
                 bestSeller = "no";
             }
 
-            setBooksInfoList(new Book(name, author, price, bestSeller).getBook());
+            setBooksInfoList(new Book(name, price, author, bestSeller).getBook());
         }
-
 
     }
     
